# mr_csm_stream

./: README.md  plugin_info.json  pyproject.toml
src/mr_csm_stream/: __init__.py  audio_pacer.py  csm_client.py  mod.py
src/mr_csm_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
